--- a/_data/metadata.yml
+++ b/_data/metadata.yml
@@ -2,7 +2,7 @@
 lang: en
 
 # Set a plain language title for the site.
-title: Plain Vanilla GitHub Pages
+title: The University News
 
 # Write a short description for the site. This is used for "meta description."
-description: Free, easy, low-tech website template using GitHub Pages
+description: The University News
